--- a/packages/hoppscotch-common/locales/ru.json
+++ b/packages/hoppscotch-common/locales/ru.json
@@ -53,7 +53,7 @@
   },
   "add": {
     "new": "Добавить новое",
-    "star": "Добавить в избранное",
+    "star": "Добавить в избранное"
   },
   "cookies": {
     "modal": {
