--- a/packages/hoppscotch-common/locales/en.json
+++ b/packages/hoppscotch-common/locales/en.json
@@ -139,9 +139,11 @@
     "generate_token": "Generate Token",
     "graphql_headers": "Authorization Headers are sent as part of the payload to connection_init",
     "include_in_url": "Include in URL",
+    "inherited_from": "Inherited from {auth} from Parent Collection {collection} ",
     "learn": "Learn how",
     "pass_key_by": "Pass by",
     "password": "Password",
+    "save_to_inherit": "Please save this request in any collection to inherit the authorization",
     "token": "Token",
     "type": "Authorization Type",
     "username": "Username",
