refactor: brought rename team name logic to details component and improved logic

--- a/packages/hoppscotch-sh-admin/locales/en.json
+++ b/packages/hoppscotch-sh-admin/locales/en.json
@@ -149,6 +149,7 @@
     "edit": "Edit",
     "email": "Team owner email",
     "email_address": "Email Address",
+    "empty_name": "Team name cannot be empty!!",
     "error": "Something went wrong. Please try again later.",
     "id": "Team ID",
     "invited_email": "Invitee Email",
