refactor: better promise and i18n syntax in id component

--- a/packages/hoppscotch-sh-admin/locales/en.json
+++ b/packages/hoppscotch-sh-admin/locales/en.json
@@ -51,6 +51,7 @@
     "settings": "Settings"
   },
   "shared_requests": {
+    "action": "Action",
     "clear_filter": "Clear Filter",
     "confirm_request_deletion": "Confirm deletion of the selected shared request?",
     "copy": "Copy",
