feat: new i18n strings for the new configs

--- a/packages/hoppscotch-sh-admin/locales/en.json
+++ b/packages/hoppscotch-sh-admin/locales/en.json
@@ -10,9 +10,11 @@
   },
   "configs": {
     "auth_providers": {
+      "callback_url": "CALLBACK URL",
       "client_id": "CLIENT ID",
       "client_secret": "CLIENT SECRET",
       "description": "Configure authentication providers for your server",
+      "scope": "SCOPE",
       "title": "Authentication Providers",
       "update_failure": "Failed to update authentication provider configurations!!"
     },
