refactor: new i18n strings for invited users

--- a/packages/hoppscotch-sh-admin/locales/en.json
+++ b/packages/hoppscotch-sh-admin/locales/en.json
@@ -82,6 +82,7 @@
     "and": "and",
     "configure_auth": "Check out the documentation to configure auth providers.",
     "confirm_logout": "Confirm Logout",
+    "confirm_delete_invites": "Confirm deletion of the selected invitation?",
     "continue_email": "Continue with Email",
     "continue_github": "Continue with Github",
     "continue_google": "Continue with Google",
@@ -89,6 +90,8 @@
     "copied_to_clipboard": "Copied to clipboard",
     "create_team_failure": "Failed to create team!!",
     "create_team_success": "Team created successfully!!",
+    "delete_invites_failure": "Failed to delete invitation!!",
+    "delete_invites_success": "Invitation deleted successfully!!",
     "delete_request_failure": "Shared Request deletion failed!!",
     "delete_request_success": "Shared Request deleted successfully!!",
     "delete_team_failure": "Team deletion failed!!",
