refactor: initial iterations
Co-authored-by: Andrew Bastin <andrewbastin.k@gmail.com>

--- a/packages/hoppscotch-common/locales/en.json
+++ b/packages/hoppscotch-common/locales/en.json
@@ -978,6 +978,7 @@
     "change": "Change workspace",
     "personal": "My Workspace",
     "team": "Team Workspace",
-    "title": "Workspaces"
+    "title": "Workspaces",
+    "no_workspace": "No Workspace"
   }
 }
