chore: updated i18n strings for invited components

--- a/packages/hoppscotch-sh-admin/locales/en.json
+++ b/packages/hoppscotch-sh-admin/locales/en.json
@@ -109,6 +109,7 @@
     "configure_auth": "Check out the documentation to configure auth providers.",
     "confirm_admin_to_user": "Do you want to remove admin status from this user?",
     "confirm_admins_to_users": "Do you want to remove admin status from selected users?",
+    "confirm_delete_invites": "Do you want to revoke the selected invite?",
     "confirm_user_deletion": "Confirm user deletion?",
     "confirm_users_deletion": "Do you want to delete selected users?",
     "confirm_user_to_admin": "Do you want to make this user into an admin?",
@@ -123,6 +124,8 @@
     "create_team_failure": "Failed to create workspace!!",
     "create_team_success": "Workspace created successfully!!",
     "data_sharing_failure": "Failed to update data sharing settings",
+    "delete_invite_failure": "Failed to delete invite!!",
+    "delete_invite_success": "Invite deleted successfully!!",
     "delete_request_failure": "Shared Request deletion failed!!",
     "delete_request_success": "Shared Request deleted successfully!!",
     "delete_team_failure": "Workspace deletion failed!!",
