refactor: code improvements and new i18n strings for invited component

--- a/packages/hoppscotch-sh-admin/locales/en.json
+++ b/packages/hoppscotch-sh-admin/locales/en.json
@@ -109,7 +109,8 @@
     "configure_auth": "Check out the documentation to configure auth providers.",
     "confirm_admin_to_user": "Do you want to remove admin status from this user?",
     "confirm_admins_to_users": "Do you want to remove admin status from selected users?",
-    "confirm_delete_invites": "Do you want to revoke the selected invite?",
+    "confirm_delete_invite": "Do you want to revoke the selected invite?",
+    "confirm_delete_invites": "Do you want to revoke selected invites?",
     "confirm_user_deletion": "Confirm user deletion?",
     "confirm_users_deletion": "Do you want to delete selected users?",
     "confirm_user_to_admin": "Do you want to make this user into an admin?",
@@ -125,11 +126,15 @@
     "create_team_success": "Workspace created successfully!!",
     "data_sharing_failure": "Failed to update data sharing settings",
     "delete_invite_failure": "Failed to delete invite!!",
+    "delete_invites_failure": "Failed to delete selected invites!!",
     "delete_invite_success": "Invite deleted successfully!!",
+    "delete_invites_success": "Selected invites deleted successfully!!",
     "delete_request_failure": "Shared Request deletion failed!!",
     "delete_request_success": "Shared Request deleted successfully!!",
     "delete_team_failure": "Workspace deletion failed!!",
     "delete_team_success": "Workspace deleted successfully!!",
+    "delete_some_users_failure": "Users Not Deleted Due to Admin Status: {count}. Please remove admin status before deleting users",
+    "delete_some_users_success": "Number of Users Deleted Successfully: {count}",
     "delete_user_failed_only_one_admin": "Failed to delete user. There should be atleast one admin!!",
     "delete_user_failure": "User deletion failed!!",
     "delete_users_failure": "Failed to delete selected users!!",
@@ -277,6 +282,7 @@
     "remove_admin_privilege": "Remove Admin Privilege",
     "remove_admin_status": "Remove Admin Status",
     "rename": "Rename",
+    "revoke_invitation": "Revoke Invitation",
     "searchbar_placeholder": "Search by name or email..",
     "send_invite": "Send Invite",
     "show_more": "Show more",
