chore: code improvements to invite modal

--- a/packages/hoppscotch-sh-admin/locales/en.json
+++ b/packages/hoppscotch-sh-admin/locales/en.json
@@ -253,6 +253,7 @@
     "admin": "Admin",
     "admin_email": "Admin Email",
     "admin_id": "Admin ID",
+    "cancel": "Cancel",
     "created_on": "Created On",
     "date": "Date",
     "delete": "Delete",
