refactor: improvements to index component and updated i18n strings

--- a/packages/hoppscotch-sh-admin/locales/en.json
+++ b/packages/hoppscotch-sh-admin/locales/en.json
@@ -133,8 +133,8 @@
     "delete_request_success": "Shared Request deleted successfully!!",
     "delete_team_failure": "Workspace deletion failed!!",
     "delete_team_success": "Workspace deleted successfully!!",
-    "delete_some_users_failure": "Users Not Deleted Due to Admin Status: {count}. Please remove admin status before deleting users",
-    "delete_some_users_success": "Number of Users Deleted Successfully: {count}",
+    "delete_some_users_failure": "Users Not Deleted: {count}",
+    "delete_some_users_success": "Number of Users Deleted: {count}",
     "delete_user_failed_only_one_admin": "Failed to delete user. There should be atleast one admin!!",
     "delete_user_failure": "User deletion failed!!",
     "delete_users_failure": "Failed to delete selected users!!",
@@ -167,6 +167,7 @@
     "remove_admin_from_users_failure": "Failed to remove admin status from selected users!!",
     "remove_admin_from_users_success": "Admin status removed from selected users!!",
     "remove_admin_to_delete_user": "Remove admin privilege to delete the user!!",
+    "remove_admin_for_deletion": "Remove admin status before attempting deletion!!",
     "remove_invitee_failure": "Removal of invitee failed!!",
     "remove_invitee_success": "Removal of invitee is successfull!!",
     "remove_member_failure": "Member couldn't be removed!!",
