--- a/packages/hoppscotch-common/locales/hu.json
+++ b/packages/hoppscotch-common/locales/hu.json
@@ -169,8 +169,8 @@
     "team_collections": "Csapat gyűjteményei"
   },
   "confirm": {
-    "close_unsaved_tab": "Biztos, hogy bezárod ezt a lapot?",
-    "close_unsaved_tabs": "Biztos, hogy bezárod az összes lapot? {count} elmentetlen lap el fog veszni.",
+    "close_unsaved_tab": "Biztos, hogy bezárja ezt a lapot?",
+    "close_unsaved_tabs": "Biztos, hogy bezárja az összes lapot? {count} elmentetlen lap el fog veszni.",
     "exit_team": "Biztosan el szeretné hagyni ezt a csapatot?",
     "logout": "Biztosan ki szeretne jelentkezni?",
     "remove_collection": "Biztosan véglegesen törölni szeretné ezt a gyűjteményt?",
