--- a/packages/hoppscotch-common/locales/es.json
+++ b/packages/hoppscotch-common/locales/es.json
@@ -376,10 +376,10 @@
   "import": {
     "collections": "Importar colecciones",
     "curl": "Importar cURL",
-    "environments_from_gist": "Import From Gist",
-    "environments_from_gist_description": "Import Hoppscotch Environments From Gist",
-    "failed": "Importación fallida",
-    "from_file": "Import from File",
+    "environments_from_gist": "Importar desde Gist",
+    "environments_from_gist_description": "Importar entornos Hoppscotch desde Gist",
+    "failed": "Error de importación. Comprueba la consola de su navegador para ver los detalles del error.",
+    "from_file": "Importar desde archivo",
     "from_gist": "Importar desde Gist",
     "from_gist_description": "Importar desde URL de Gist",
     "from_insomnia": "Importar desde Insomnia",
