fix: spanish lang translation messages

--- a/packages/hoppscotch-common/locales/es.json
+++ b/packages/hoppscotch-common/locales/es.json
@@ -224,25 +224,25 @@
     "authorization": "Esta solicitud no utiliza ninguna autorización.",
     "body": "Esta solicitud no tiene cuerpo",
     "collection": "La colección está vacía",
-    "collections": "Las colecciones están vacías",
+    "collections": "No hay colecciones",
     "documentation": "Conectarse a un punto final de GraphQL para ver la documentación",
     "endpoint": "El punto final no puede estar vacío",
-    "environments": "Los entornos están vacíos",
+    "environments": "No hay entornos",
     "folder": "La carpeta está vacía",
     "headers": "Esta solicitud no tiene encabezados",
     "history": "El historial está vacío",
     "invites": "La lista de invitados está vacía",
-    "members": "El equipo está vacío",
+    "members": "No hay miembros en el equipo",
     "parameters": "Esta solicitud no tiene ningún parámetro",
     "pending_invites": "No hay invitaciones pendientes para este equipo",
     "profile": "Iniciar sesión para ver tu perfil",
-    "protocols": "Los protocolos están vacíos",
+    "protocols": "No hay protocolos",
     "schema": "Conectarse a un punto final de GraphQL",
-    "shared_requests": "Las solicitudes compartidas están vacías",
+    "shared_requests": "No hay solicitudes compartidas",
     "shared_requests_logout": "Iniciar sesión para ver sus solicitudes compartidas o crear una nueva",
-    "subscription": "Las suscripciones están vacías",
+    "subscription": "No hay suscripciones",
     "team_name": "Nombre del equipo vacío",
-    "teams": "Los equipos están vacíos",
+    "teams": "No hay equipos",
     "tests": "No hay pruebas para esta solicitud",
     "shortcodes": "Aún no se han creado Shortcodes"
   },
