fix: spanish lang translation messages

--- a/packages/hoppscotch-common/locales/es.json
+++ b/packages/hoppscotch-common/locales/es.json
@@ -223,15 +223,15 @@
   "empty": {
     "authorization": "Esta solicitud no utiliza ninguna autorización.",
     "body": "Esta solicitud no tiene cuerpo",
-    "collection": "La colección está vacía",
+    "collection": "Colección vacía",
     "collections": "No hay colecciones",
     "documentation": "Conectarse a un punto final de GraphQL para ver la documentación",
     "endpoint": "El punto final no puede estar vacío",
     "environments": "No hay entornos",
-    "folder": "La carpeta está vacía",
+    "folder": "Carpeta vacía",
     "headers": "Esta solicitud no tiene encabezados",
-    "history": "El historial está vacío",
-    "invites": "La lista de invitados está vacía",
+    "history": "No hay historial",
+    "invites": "Lista de invitados vacía",
     "members": "No hay miembros en el equipo",
     "parameters": "Esta solicitud no tiene ningún parámetro",
     "pending_invites": "No hay invitaciones pendientes para este equipo",
